infra/k8s/components/bak/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: todoapp-gateway
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      # 'hostname' will be patched by overlay
      allowedRoutes:
        namespaces:
          from: Same
