infra/k8s/components/bak/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: todoapp-route
spec:
  parentRefs:
    - name: todoapp-gateway
  # 'hostnames' will be patched by overlay
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/auth
      backendRefs:
        - name: auth
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /api/tasks
      backendRefs:
        - name: core
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: web
          port: 80
